Terraform-Playground/gcp_bastion/vpc.tf
resource "google_compute_network" "vpc" {
  name = "${var.project_id}-vpc"

  auto_create_subnetworks = false
}
